Removendo consoles, validando formulário

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br" ng-app="guiacc">
+<html lang="en" ng-app="guiacc">
 <head>
   <meta charset="utf-8">  
   <title>GuiaCC</title>
   <meta name="description" content="Guia de leis do consumidor simplificada">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="lib/AngularJS-Toaster/toaster.min.css">
   <link rel="stylesheet" href="assets/css/style.css">  
 </head>
 <body>  
@@ -21,7 +22,8 @@
   <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>  
   <script src="lib/angular-route/angular-route.js"></script>
   <script src="lib/ng-file-upload/ng-file-upload.js"></script>
-  <script src="lib/AngularJS-Toaster/toaster.js"></script>
+  <script src="lib/AngularJS-Toaster/toaster.min.js"></script>
+  <script src="lib/angular-animate/angular-animate.min.js"></script>
 
   <!-- Módulo principal da aplicação -->
   <script src="www/app.js"></script>
