--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">  
   <title>GuiaCC</title>
+  <base href="/">
   <meta name="description" content="Guia de leis do consumidor simplificada">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
