Up production test

--- a/index.html
+++ b/index.html
@@ -9,35 +9,28 @@
   <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="lib/AngularJS-Toaster/toaster.min.css">
   <link rel="stylesheet" href="assets/css/style.css">  
+  <!-- <link rel="stylesheet" href="dist/all.min.css"> -->
 </head>
 <body>  
 
   <ng-view></ng-view>
-  <!-- Módulo principal angular -->
 
-  <script src="lib/angular/angular.js"></script>
-
+  <script src="dist/vendor.min.js"></script>
+  <script src="dist/app.min.js"></script>
   
-  <!-- Módulos externos-->
+  <!-- <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>  
   <script src="lib/angular-route/angular-route.js"></script>
-  <script src="lib/ng-file-upload/ng-file-upload.js"></script>
   <script src="lib/AngularJS-Toaster/toaster.min.js"></script>
   <script src="lib/angular-animate/angular-animate.min.js"></script>
 
-  <!-- Módulo principal da aplicação -->
   <script src="www/app.js"></script>
   
-  <!-- Controllers  -->
   <script src="www/controllers/home/homeCtrl.js"></script>
   
-  <!-- Services  -->
   <script src="www/services/home/homeServiceApi.js"></script>
-  <!-- Directives -->
  
-  <!-- Config -->
-  <script src="www/config/config.js"></script>
+  <script src="www/config/config.js"></script> -->
   
 </body>
 </html>
