--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <base href="/">
   <meta name="description" content="Guia de leis do consumidor simplificada">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+  <!-- <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="lib/AngularJS-Toaster/toaster.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">  
-  <!-- <link rel="stylesheet" href="dist/all.min.css"> -->
+  <link rel="stylesheet" href="assets/css/style.css">   -->
+  <link rel="stylesheet" href="dist/all.min.css">
 </head>
 <body>  
 
